# ResearchGit

./: .gitignore  LICENSE  README.md
.github/workflows/: build-paper.yml
cli/: README.md  pyproject.toml
cli/draftgit/: cli.py
docs/: README.md  roadmap.md
docs/architecture/: overview.md
docs/product/: v1-scope.md  vision.md
docs/workflows/: manuscript-lifecycle.md
examples/hello-paper/: paper.typ  references.bib
sharing/project_intro/: README.md  export_pdf.sh  index.html  theme.css
